# gtensor

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: CUSTOM_OPS.md  cuda_setup.typ  errors.typ
docs/unused/: bmls.aux  bmls.bbl  bmls.bcf  bmls.blg  bmls.fdb_latexmk  bmls.fls  bmls.out  bmls.run.xml  bmls.tex  bmls.toc  docs.bib  ops.typ
examples/: classification.rs  knn_mnist.rs  regression.rs
src/: error.rs  lib.rs
src/alg/: knn.rs  mod.rs
src/data/: dataset.rs  iter.rs  load.rs  mod.rs
src/gpu/: default.rs  device.rs  kernel.rs  mod.rs  modules.rs  stream.rs
src/gpu/cu/: array.rs  ctx.rs  device.rs  event.rs  external.rs  func.rs  graph.rs  ipc.rs  launch.rs  link.rs  mem.rs  mipmapped.rs  mod.rs  module.rs  occupancy.rs  pointer.rs  stream.rs  sys.rs  thread.rs  types.rs  user.rs
src/gpu/kernels/sm_52/: mulf32.cu  mulf64.cu
src/gpu/kernels/sm_70/: mulf16.cu
src/gpu/kernels/sm_80/: mulbf16.cu
src/graph/: arena.rs  builder.rs  gtensor.rs  mod.rs  node.rs  serde.rs  tape.rs  var.rs
src/initializers/: constant.rs  kaiming.rs  mod.rs  normal.rs  random.rs  uniform.rs  xavier.rs
src/math/: loss.rs  mod.rs
src/nn/: mod.rs  node.rs  scheduler.rs  scope.rs  var.rs
src/nn/operators/: mod.rs  mul.rs
src/operators/: avg_pool.rs  axis_add.rs  dropout.rs  flatten.rs  im2col.rs  input.rs  lrn.rs  matmul.rs  max_pool.rs  mod.rs  relu.rs  reshape.rs  sigmoid.rs  softmax.rs  tanh.rs
src/optimizers/: adam.rs  mod.rs  momentum.rs  sgd.rs
src/storage/: cpu.rs  float.rs  gpu.rs  mod.rs  shape.rs  tensor.rs  traits.rs
src/tensor/: axis.rs  getset.rs  iter.rs  math.rs  mod.rs  shape.rs  slice.rs
src/util/: lazy.rs  mod.rs  unsafe_cell.rs
