[package]
name = "gtensor"
version = "0.2.1"
edition = "2021"
authors = ["Rylan Yancey"]
description = "Reverse-mode autodifferentiation of computational graphs with tensors and more for machine learning."
documentation = "https://github.com/RylanYancey/gtensor/tree/main/docs"
readme = "README.md"
repository = "https://github.com/RylanYancey/gtensor/tree/main"
license = "MIT OR Apache-2.0"
keywords = ["ml", "autodiff", "machine-learning", "statistics", "math"]
categories = ["algorithms", "mathematics", "visualization"]

[profile.release]
debug = true

[dev-dependencies]
bmp = "0.5.0"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.192", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde_traitobject = "0.2.8"
dyn-clone = "1.0.16"
csv = "1.3.0"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
rayon = "1.8.0"
bmls = "1.0.0"

[[example]]
name = "classification"

[[example]]
name = "regression"

[[example]]
name = "knn_mnist"
