[package]
name = "gtensor"
version = "0.1.0"
edition = "2021"

[features]
default = ["f16"]
gpu = []
f16 = ["gpu"]
bf16 = ["gpu"]

[profile.dev]
features = ["gpu"]

[dependencies]
anyhow = "1.0.79"
as-slice = "0.2.1"
hashbrown = "0.14.3"
itertools = "0.12.0"
ndarray = "0.15.6"
num-traits = "0.2.17"
once_cell = "1.19.0"
upto = "0.1.5"

[dependencies.half]
version = "2.3.1"
features = ["num-traits"]

[build-dependencies]
bindgen = "0.69.2"
cc = "1.0.83"
